--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,3 +195,68 @@ section .right .image img{
 section .right .image img:hover{
     transform: rotate(0deg) scale(1.189);
 }
+
+/* ========================= Loader ============================ */
+
+.loader{
+    background: #333;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    z-index: 1000;
+    transition: opacity .4s ease;
+    opacity : 1;
+}
+
+
+.color__pink{
+    animation: rotation1 1.2s infinite linear;
+    transform-origin: center;
+}
+
+
+
+@keyframes rotation1{
+    0%{
+        transform: rotateZ(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+
+.color__blue{
+    animation:rotation2 1.2s infinite linear;
+    transform-origin: center;
+}
+
+@keyframes rotation2{
+    0%{
+        transform: rotateZ(360deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
+}
+
+.middle__text{
+    animation: scale 1.2s infinite linear;
+    transform-origin: center;
+}
+
+@keyframes scale{
+    0%{
+        transform: scale(0);
+    }
+    50%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
+    }
+}
